2006-08-12  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* === First import the project ===